--- a/index.html
+++ b/index.html
@@ -179,16 +179,15 @@
             }
 
             const sequenceBytes = sequenceInput.split(' ').map(hex => parseInt(hex, 16));
-            const occurrences = highlightSequence(byteArray, sequenceBytes, highlightColor);
+            highlightSequence(byteArray, sequenceBytes, highlightColor);
 
-            // Add to highlight list with occurrences
-            addHighlightToList(sequenceInput, highlightColor, occurrences);
+            // Add to highlight list
+            addHighlightToList(sequenceInput, highlightColor);
         });
 
         function highlightSequence(byteArray, sequenceBytes, color) {
             const byteElements = document.querySelectorAll('.byte');
             const sequenceLength = sequenceBytes.length;
-            let count = 0;
 
             for (let i = 0; i <= byteArray.length - sequenceLength; i++) {
                 let match = true;
@@ -200,7 +199,6 @@
                 }
 
                 if (match) {
-                    count++;
                     for (let j = 0; j < sequenceLength; j++) {
                         const byteIndex = i + j;
                         const byteElement = document.querySelector(`.byte[data-byte-index="${byteIndex}"]`);
@@ -210,11 +208,10 @@
                     }
                 }
             }
-            return count;
         }
 
         // Function to add highlights to the list
-        function addHighlightToList(byteSequence, color, occurrences) {
+        function addHighlightToList(byteSequence, color) {
             const highlightListDiv = document.getElementById('highlightList');
 
             // Create a new highlight item
@@ -227,12 +224,12 @@
             colorBox.style.backgroundColor = color;
             highlightItem.appendChild(colorBox);
 
-            // Label with occurrences
+            // Label input
             const labelInput = document.createElement('input');
             labelInput.className = 'highlight-label';
             labelInput.type = 'text';
-            labelInput.readOnly = true;
-            labelInput.value = `Byte Sequence: ${byteSequence} | Occurrences: ${occurrences}`;
+            labelInput.placeholder = 'Enter label';
+            labelInput.value = `Byte Sequence: ${byteSequence}`;
             highlightItem.appendChild(labelInput);
 
             // Append to the list
@@ -242,9 +239,51 @@
             highlightList.push({
                 byteSequence,
                 color,
-                occurrences
+                label: labelInput
             });
+        }
+
+        // Hashing functionality
+        document.getElementById('hashButton').addEventListener('click', function() {
+            const text = document.getElementById('hashInput').value.trim();
+            if (!text) {
+                alert("Please enter some text to hash.");
+                return;
+            }
+
+            const hashValue = computeTextHashLowerCase(text);
+            const littleEndianHex = toLittleEndianHex(hashValue);
+
+            document.getElementById('hashOutput').textContent = `Hash: ${littleEndianHex}`;
+        });
+
+        function computeTextHashLowerCase(text) {
+            let hashValue = BigInt(-1);
+
+            for (let i = 0; i < text.length; i++) {
+                let charValue = BigInt(text.charCodeAt(i));
+
+                // Convert uppercase to lowercase
+                if (charValue >= BigInt(65) && charValue <= BigInt(90)) {
+                    charValue |= BigInt(0x20);
+                }
+
+                // Update hash
+                hashValue = charValue + hashValue * BigInt(0x21);
+            }
+
+            return hashValue;
+        }
+
+        function toLittleEndianHex(hashValue) {
+            const buffer = new ArrayBuffer(8);
+            const dataView = new DataView(buffer);
+            dataView.setBigUint64(0, hashValue, true); // true for little-endian
+            return Array.from(new Uint8Array(buffer))
+                .map(byte => byte.toString(16).padStart(2, '0'))
+                .join(' ');
         }
     </script>
 </body>
 </html>
+Garde ce code en mémoire 
